--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "time-tracker",
   "productName": "time-tracker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
@@ -18,12 +18,13 @@
     "forge": {
       "make_targets": {
         "win32": [
-          "squirrel"
+          "zip"
         ],
         "darwin": [
           "zip"
         ],
         "linux": [
+          "zip",
           "deb"
         ]
       },
